# cjm-file-discovery

./: README.md  demo_app.py  index.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
.github/workflows/: deploy.yaml  test.yaml
cache/: memory.html  memory.html.md
cjm_file_discovery/: _modidx.py
cjm_file_discovery/cache/: memory.py
cjm_file_discovery/core/: config.py  models.py  protocols.py
cjm_file_discovery/providers/: local.py
cjm_file_discovery/scanning/: filters.py  scanner.py
cjm_file_discovery/utils/: formatting.py
core/: config.html  config.html.md  models.html  models.html.md  protocols.html  protocols.html.md
nbs/: index.ipynb  nbdev.yml
nbs/cache/: memory.ipynb
nbs/core/: config.ipynb  models.ipynb  protocols.ipynb
nbs/providers/: local.ipynb
nbs/scanning/: filters.ipynb  scanner.ipynb
nbs/utils/: formatting.ipynb
providers/: local.html  local.html.md
scanning/: filters.html  filters.html.md  scanner.html  scanner.html.md
utils/: formatting.html  formatting.html.md
